# xfbin-rs-py

./: Cargo.toml  pyproject.toml
src/: lib.rs  xfbin.rs  xfbin_file.rs
src/nucc/: mod.rs  nucc_ambient.rs  nucc_anm.rs  nucc_anmstrm.rs  nucc_anmstrmframe.rs  nucc_binary.rs  nucc_camera.rs  nucc_layerset.rs  nucc_lightdirc.rs  nucc_lightpoint.rs  nucc_morphmodel.rs  nucc_unknown.rs
src/nucc_chunk/: mod.rs  nucc_chunk_ambient.rs  nucc_chunk_anm.rs  nucc_chunk_anmstrm.rs  nucc_chunk_anmstrmframe.rs  nucc_chunk_binary.rs  nucc_chunk_camera.rs  nucc_chunk_index.rs  nucc_chunk_layerset.rs  nucc_chunk_lightdirc.rs  nucc_chunk_lightpoint.rs  nucc_chunk_morphmodel.rs  nucc_chunk_null.rs  nucc_chunk_page.rs  nucc_chunk_texture.rs  nucc_chunk_unknown.rs  nucc_helper.rs
